@@ -8,6 +8,7 @@ FEATURE: Core | Alerts can now be suppressed and shown on demand [amc1]
 FEATURE: Plug | Plugins can now add their own status indicators on the status bar [amc1]
 FEATURE: Plug | Plugins can now add menu items to the system tray [amc1]
 FEATURE: Plug | Plugins can now add menu items to download bars [amc1]
+FEATURE: Plug | Plugins can now add menu items to the menu bar [amc1]
 FEATURE: Core | Per-peer upload/download speed limits [Parg]
 FEATURE: Core | Per-category upload/download speed limits [Parg]
 
